--- a/search/src/App.css
+++ b/search/src/App.css
@@ -14,7 +14,7 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  background-color: #1e1e1e;
   min-height: 50px;
   display: flex;
   flex-direction: column;
