--- a/search/src/index.css
+++ b/search/src/index.css
@@ -4,7 +4,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
-  background-color: #282c34;
+  background-color: #1e1e1e;
   -moz-osx-font-smoothing: grayscale;
 }
 
